[gd_scene load_steps=10 format=3 uid="uid://c8jbgus36o8bs"]

[ext_resource type="Script" path="res://main.gd" id="1_k40ft"]
[ext_resource type="PackedScene" uid="uid://bujysl0i1ktjq" path="res://player.tscn" id="1_tw2b7"]
[ext_resource type="PackedScene" uid="uid://bvpqvftbetyqj" path="res://enemy.tscn" id="2_t52xh"]
[ext_resource type="Texture2D" uid="uid://51s2tp8rrd6a" path="res://art/gfx/Overworld.png" id="3_jsvxh"]
[ext_resource type="Script" path="res://hud.gd" id="5_42kxu"]
[ext_resource type="FontFile" uid="uid://dm3latgn7kgnj" path="res://fonts/Xolonium-Regular.ttf" id="6_d86dy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2d1w4"]
texture = ExtResource("3_jsvxh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
32:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
32:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
30:12/0 = 0
32:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
0:13/0 = 0
1:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
32:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
32:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
17:16/0 = 0
18:16/0 = 0
23:16/0 = 0
24:16/0 = 0
28:16/0 = 0
29:16/0 = 0
33:16/0 = 0
0:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
36:17/0 = 0
37:17/0 = 0
38:17/0 = 0
39:17/0 = 0
0:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
33:18/0 = 0
34:18/0 = 0
35:18/0 = 0
36:18/0 = 0
37:18/0 = 0
38:18/0 = 0
39:18/0 = 0
0:19/0 = 0
1:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
33:19/0 = 0
34:19/0 = 0
35:19/0 = 0
36:19/0 = 0
37:19/0 = 0
38:19/0 = 0
39:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
28:22/0 = 0
29:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
15:23/0 = 0
16:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
12:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0
25:28/0 = 0
26:28/0 = 0
28:28/0 = 0
29:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
14:29/0 = 0
15:29/0 = 0
16:29/0 = 0
17:29/0 = 0
18:29/0 = 0
19:29/0 = 0
20:29/0 = 0
21:29/0 = 0
22:29/0 = 0
23:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
19:31/0 = 0
20:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
21:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
27:32/0 = 0
0:33/0 = 0
1:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
18:33/0 = 0
24:33/0 = 0
25:33/0 = 0
26:33/0 = 0
27:33/0 = 0
0:34/0 = 0
1:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
0:35/0 = 0
1:35/0 = 0

[sub_resource type="TileSet" id="TileSet_e47sf"]
sources/2 = SubResource("TileSetAtlasSource_2d1w4")

[sub_resource type="Curve2D" id="Curve2D_svcak"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 483, 722, 0, 0, 0, 0, 3, 724, 0, 0, 0, 0, 1, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_k40ft")
mob_scene = ExtResource("2_t52xh")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_e47sf")
rendering_quadrant_size = 60
format = 2
layer_0/name = "Layer1"
layer_0/tile_data = PackedInt32Array(-65536, 327682, 10, 0, 327682, 10, 65536, 327682, 10, 131072, 327682, 10, 196608, 327682, 10, 262144, 327682, 10, 327680, 327682, 10, 393216, 327682, 10, 458752, 327682, 10, 524288, 65538, 3, 589824, 65538, 4, 655360, 65538, 4, 720896, 65538, 5, 851968, 196610, 7, 917504, 196610, 7, 983040, 196610, 7, 1048576, 196610, 7, -65535, 327682, 10, 1, 327682, 10, 65537, 327682, 10, 131073, 327682, 10, 196609, 327682, 10, 262145, 327682, 10, 327681, 327682, 10, 393217, 327682, 10, 458753, 327682, 10, 524289, 65538, 3, 589825, 65538, 4, 655361, 65538, 4, 720897, 65538, 5, 786433, 196610, 6, 851969, 196610, 7, 917505, 196610, 7, 983041, 196610, 7, 1048577, 196610, 7, -65534, 327682, 10, 2, 327682, 10, 65538, 327682, 10, 131074, 327682, 10, 196610, 327682, 10, 262146, 327682, 10, 327682, 327682, 10, 393218, 327682, 10, 458754, 327682, 10, 524290, 65538, 3, 589826, 65538, 4, 655362, 65538, 4, 720898, 65538, 4, 786434, 262146, 6, 851970, 262146, 7, 917506, 196610, 7, 983042, 196610, 7, 1048578, 196610, 7, -65533, 327682, 10, 3, 327682, 10, 65539, 327682, 10, 131075, 327682, 10, 196611, 327682, 10, 262147, 327682, 10, 327683, 327682, 10, 393219, 327682, 10, 458755, 327682, 10, 524291, 131074, 3, 589827, 131074, 4, 655363, 65538, 4, 720899, 65538, 4, 786435, 65538, 5, 851971, 327682, 9, 917507, 262146, 7, 983043, 262146, 7, 1048579, 131074, 10, -65532, 327682, 10, 4, 327682, 10, 65540, 327682, 10, 131076, 327682, 10, 196612, 327682, 10, 262148, 327682, 10, 327684, 327682, 10, 393220, 327682, 10, 458756, 327682, 10, 524292, 327682, 10, 589828, 65538, 3, 655364, 65538, 4, 720900, 65538, 4, 786436, 65538, 4, 851972, 65538, 5, 917508, 327682, 10, 983044, 327682, 10, 1048580, 720898, 14, -65531, 327682, 10, 5, 327682, 10, 65541, 327682, 10, 131077, 327682, 10, 196613, 327682, 10, 262149, 327682, 10, 327685, 327682, 10, 393221, 327682, 10, 458757, 327682, 10, 524293, 327682, 10, 589829, 65538, 3, 655365, 65538, 4, 720901, 65538, 4, 786437, 65538, 4, 851973, 65538, 5, 917509, 327682, 10, 983045, 327682, 10, 1048581, 655362, 14, -65530, 327682, 10, 6, 327682, 10, 65542, 327682, 10, 131078, 327682, 10, 196614, 327682, 10, 262150, 327682, 10, 327686, 327682, 10, 393222, 327682, 10, 458758, 327682, 10, 524294, 327682, 10, 589830, 131074, 3, 655366, 131074, 4, 720902, 65538, 4, 786438, 65538, 4, 851974, 65538, 5, 917510, 327682, 10, 983046, 327682, 10, 1048582, 327682, 10, -65529, 327682, 10, 7, 327682, 10, 65543, 327682, 10, 131079, 327682, 10, 196615, 327682, 10, 262151, 327682, 10, 327687, 327682, 10, 393223, 327682, 10, 458759, 327682, 10, 524295, 327682, 10, 589831, 327682, 10, 655367, 65538, 3, 720903, 65538, 4, 786439, 65538, 4, 851975, 65538, 5, 917511, 327682, 10, 983047, 327682, 10, 1048583, 327682, 10, -65528, 327682, 10, 8, 327682, 10, 65544, 327682, 10, 131080, 327682, 10, 196616, 327682, 10, 262152, 327682, 10, 327688, 327682, 10, 393224, 327682, 10, 458760, 327682, 10, 524296, 327682, 10, 589832, 327682, 10, 655368, 65538, 3, 720904, 65538, 4, 786440, 65538, 4, 851976, 65538, 5, 917512, 327682, 10, 983048, 327682, 10, 1048584, 327682, 10, -65527, 327682, 10, 9, 327682, 10, 65545, 327682, 10, 131081, 327682, 10, 196617, 327682, 10, 262153, 327682, 10, 327689, 327682, 10, 393225, 327682, 10, 458761, 327682, 10, 524297, 327682, 10, 589833, 2, 4, 655369, 65538, 4, 720905, 65538, 4, 786441, 65538, 5, 851977, 131074, 5, 917513, 327682, 10, 983049, 327682, 10, 1048585, 327682, 10, -65526, 327682, 10, 10, 327682, 10, 65546, 327682, 10, 131082, 327682, 10, 196618, 327682, 10, 262154, 327682, 10, 327690, 327682, 10, 393226, 327682, 10, 458762, 327682, 10, 524298, 65538, 3, 589834, 65538, 4, 655370, 65538, 4, 720906, 65538, 4, 786442, 65538, 5, 851978, 327682, 10, 917514, 327682, 10, 983050, 327682, 10, 1048586, 327682, 10, -65525, 327682, 10, 11, 327682, 10, 65547, 327682, 10, 131083, 327682, 10, 196619, 327682, 10, 262155, 327682, 10, 327691, 327682, 10, 393227, 327682, 10, 458763, 327682, 10, 524299, 65538, 3, 589835, 65538, 4, 655371, 65538, 4, 720907, 65538, 5, 786443, 131074, 5, -65524, 327682, 10, 12, 327682, 10, 65548, 327682, 10, 131084, 327682, 10, 196620, 327682, 10, 262156, 327682, 10, 327692, 327682, 10, 393228, 327682, 10, 458764, 65538, 3, 524300, 65538, 4, 589836, 65538, 4, 655372, 65538, 4, 720908, 65538, 5, -65523, 327682, 10, 13, 327682, 10, 65549, 327682, 10, 131085, 327682, 10, 196621, 327682, 10, 262157, 327682, 10, 327693, 327682, 10, 393229, 327682, 10, 458765, 65538, 3, 524301, 65538, 4, 589837, 65538, 4, 655373, 65538, 5, 720909, 131074, 5, -65522, 327682, 10, 14, 327682, 10, 65550, 327682, 10, 131086, 327682, 10, 196622, 327682, 10, 262158, 327682, 10, 327694, 327682, 10, 393230, 65538, 3, 458766, 65538, 4, 524302, 65538, 4, 589838, 65538, 4, 655374, 65538, 5, -65521, 327682, 10, 15, 327682, 10, 65551, 327682, 10, 131087, 327682, 10, 196623, 327682, 10, 262159, 327682, 10, 327695, 327682, 10, 393231, 65538, 3, 458767, 65538, 4, 524303, 65538, 4, 589839, 65538, 5, 655375, 131074, 5, -65520, 327682, 10, 16, 327682, 10, 65552, 327682, 10, 131088, 327682, 10, 196624, 327682, 10, 262160, 327682, 10, 327696, 65538, 3, 393232, 65538, 4, 458768, 65538, 4, 524304, 65538, 4, 589840, 65538, 5, -65519, 2, 4, 17, 2, 4, 65553, 2, 4, 131089, 2, 4, 196625, 2, 4, 262161, 2, 4, 327697, 65538, 4, 393233, 65538, 4, 458769, 65538, 4, 524305, 65538, 5, 589841, 131074, 5, -65518, 65538, 4, 18, 65538, 4, 65554, 65538, 4, 131090, 65538, 4, 196626, 65538, 4, 262162, 65538, 4, 327698, 65538, 4, 393234, 65538, 4, 458770, 65538, 5, 524306, 131074, 5, -65517, 65538, 4, 19, 65538, 4, 65555, 65538, 4, 131091, 65538, 4, 196627, 65538, 4, 262163, 65538, 4, 327699, 65538, 5, 393235, 131074, 5, 458771, 131074, 5, -65516, 131074, 4, 20, 131074, 4, 65556, 131074, 4, 131092, 131074, 4, 196628, 131074, 4, 262164, 131074, 4, 786432, 196610, 6)
layer_1/name = "Layer2"
layer_1/tile_data = PackedInt32Array(983039, 524290, 7, 1048575, 524290, 8, 917504, 589826, 7, 983040, 720898, 8, 917505, 589826, 7, 983041, 786434, 8, 917506, 589826, 7, 983042, 262146, 0, 917507, 655362, 7, 983043, 655362, 8, 917503, 524290, 6, 851969, 589826, 6, 851970, 589826, 6, 851971, 655362, 6, 1048576, 327682, 0, 851968, 589826, 6, 131080, 1441794, 9, 196616, 1441794, 10, 262152, 1441794, 11, 131081, 1507330, 9, 196617, 1507330, 10, 262153, 1507330, 11, 131082, 1572866, 9, 196618, 1572866, 10, 262154, 1572866, 11, -196608, 393218, 0, -131072, 393218, 1, -65536, 393218, 2, 0, 393218, 3, -196607, 458754, 0, -131071, 458754, 1, -65535, 458754, 2, 1, 458754, 3, -196606, 524290, 0, -131070, 524290, 1, -65534, 524290, 2, 2, 524290, 3, -196605, 589826, 0, -131069, 589826, 1, -65533, 589826, 2, 3, 589826, 3, -196604, 655362, 0, -131068, 655362, 1, -65532, 655362, 2, 4, 655362, 3, 65536, 393218, 4, 65537, 458754, 4, 65538, 524290, 4, 65539, 589826, 4, 65540, 655362, 4)
layer_2/name = "Layer3"
layer_2/tile_data = PackedInt32Array(720896, 589826, 11, 786432, 589826, 12, 720897, 655362, 11, 786433, 655362, 12, 0, 2097154, 1, 4, 2097154, 1, 65536, 2097154, 2, 65539, 2293762, 2, 65540, 2097154, 2)

[node name="Player" parent="." instance=ExtResource("1_tw2b7")]
position = Vector2(71, 66)

[node name="MobTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_svcak")

[node name="LocalMobGeneration" type="PathFollow2D" parent="MobPath"]
position = Vector2(1, 0)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_42kxu")

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 354.0
offset_top = 3.0
offset_right = 466.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_d86dy")
theme_override_font_sizes/font_size = 16
text = "Pontuação: 0"

[node name="LivesLabel" type="Label" parent="HUD"]
offset_left = 396.0
offset_top = 58.0
offset_right = 465.0
offset_bottom = 81.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_d86dy")
theme_override_font_sizes/font_size = 16
text = "Vidas: 3"

[node name="TimeLabel" type="Label" parent="HUD"]
offset_left = 376.0
offset_top = 32.0
offset_right = 467.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_d86dy")
theme_override_font_sizes/font_size = 16
text = "Tempo: 60"

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
